--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@react-three/drei": "^9.88.14",
 		"@react-three/fiber": "^8.15.11",
 		"@react-three/rapier": "^1.1.2",
+		"@tweenjs/tween.js": "^21.0.0",
 		"@types/three": "^0.158.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
